Fixes #3773 - Inconstant alignment in the listing of attachments/submit button in new article area Fixes #3774 - Broken dialog whiling uploading oversized attachment

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -7063,6 +7063,11 @@ footer {
     .ticket-create .attachments:not(:empty) {
       margin-left: 0;
       margin-right: 0;
+      margin-bottom: 56px;
+    }
+
+    .ticket-create .attachment--row {
+      line-height: 1.45;
     }
 
     .attachment.attachment--row {
